--- a/src/Confitec.Technical.Test.Infra.Crosscutting/Confitec.Technical.Test.Infra.Crosscutting.csproj
+++ b/src/Confitec.Technical.Test.Infra.Crosscutting/Confitec.Technical.Test.Infra.Crosscutting.csproj
@@ -7,13 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.10.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
     <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Confitec.Technical.Test.Application\Confitec.Technical.Test.Application.csproj" />
   </ItemGroup>
 
 </Project>
