--- a/client/package.json
+++ b/client/package.json
@@ -11,38 +11,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.6",
-    "@angular/cdk": "^11.2.5",
-    "@angular/common": "~11.2.6",
-    "@angular/compiler": "~11.2.6",
-    "@angular/core": "~11.2.6",
-    "@angular/forms": "~11.2.6",
-    "@angular/material": "^11.2.5",
-    "@angular/platform-browser": "~11.2.6",
-    "@angular/platform-browser-dynamic": "~11.2.6",
-    "@angular/router": "~11.2.6",
+    "@abacritt/angularx-social-login": "^1.2.4",
+    "@angular/animations": "~14.2.1",
+    "@angular/cdk": "^14.2.1",
+    "@angular/common": "~14.2.1",
+    "@angular/compiler": "~14.2.1",
+    "@angular/core": "~14.2.1",
+    "@angular/forms": "~14.2.1",
+    "@angular/material": "^14.2.1",
+    "@angular/platform-browser": "~14.2.1",
+    "@angular/platform-browser-dynamic": "~14.2.1",
+    "@angular/router": "~14.2.1",
     "@auth0/angular-jwt": "^5.0.2",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "rxjs": "~7.5.6",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.5",
-    "@angular/cli": "~11.2.5",
-    "@angular/compiler-cli": "~11.2.6",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "@angular-devkit/build-angular": "~14.2.2",
+    "@angular/cli": "~14.2.1",
+    "@angular/compiler-cli": "~14.2.1",
+    "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.7.16",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~4.4.0",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "ts-node": "~10.9.1",
+    "tslint": "~6.1.3",
+    "typescript": "~4.8.3"
   }
 }
