--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,25 +2,55 @@ version: "3.9"
 services:
     front:
         build: ./client/
-        container_name: confitec-technical-test-client
+        container_name: front
         ports:
             - '9000:80'
         depends_on:
             - web
+        networks:
+            - resolute
+
     web:
         build: ./src/
-        container_name: confitec-technical-test-back
+        container_name: back
         ports:
             - "8081:80"
         depends_on:
             - mssql
+            - rabbitmq
+        networks:
+            - resolute
+
     mssql:
         image: "mcr.microsoft.com/mssql/server"
-        container_name: confitec-technical-test-client-sql
+        container_name: sql
         hostname: mssql
         environment:
             SA_PASSWORD: "testes@123"
             ACCEPT_EULA: "Y"
-        restart: unless-stopped    
+        restart: unless-stopped
         ports:
-            - "11433:1433" 
+            - "11433:1433"
+        networks:
+            - resolute
+
+    rabbitmq:
+        image: rabbitmq:3-management
+        container_name: rabbitmq
+        hostname: rabbitmq-container
+        ports:
+            - 5672:5672
+            - 15672:15672
+        environment:
+            - RABBITMQ_DEFAULT_USER=guest
+            - RABBITMQ_DEFAULT_PASS=guest
+        volumes:
+            - ~/.docker-conf/rabbitmq/data/:/var/lib/rabbitmq/
+            - ~/.docker-conf/rabbitmq/log/:/var/log/rabbitmq
+        networks:
+            - resolute
+
+networks:
+    resolute:
+        external:
+            name: resolute
